; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/iwrap/extr_main.c_sleep.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/iwrap/extr_main.c_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WD_IRQ = common dso_local global i32 0, align 4
@SLEEP_MODE_PWR_DOWN = common dso_local global i32 0, align 4
@WD_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @sleep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sleep(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @WD_IRQ, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 (i32, ...) @WD_SET(i32 %3, i32 %4)
  %6 = call i32 (...) @cli()
  %7 = load i32, i32* @SLEEP_MODE_PWR_DOWN, align 4
  %8 = call i32 @set_sleep_mode(i32 %7)
  %9 = call i32 (...) @sleep_enable()
  %10 = call i32 (...) @sleep_bod_disable()
  %11 = call i32 (...) @sei()
  %12 = call i32 (...) @sleep_cpu()
  %13 = call i32 (...) @sleep_disable()
  %14 = load i32, i32* @WD_OFF, align 4
  %15 = call i32 (i32, ...) @WD_SET(i32 %14)
  ret void
}

declare dso_local i32 @WD_SET(i32, ...) #1

declare dso_local i32 @cli(...) #1

declare dso_local i32 @set_sleep_mode(i32) #1

declare dso_local i32 @sleep_enable(...) #1

declare dso_local i32 @sleep_bod_disable(...) #1

declare dso_local i32 @sei(...) #1

declare dso_local i32 @sleep_cpu(...) #1

declare dso_local i32 @sleep_disable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
